# embedded-framework

./: .gitignore  CMakeLists.txt  build_run.ps1
app/: CMakeLists.txt  main.c
boards/: CMakeLists.txt
boards/native_sim/: CMakeLists.txt  hss_board.c  hss_board.h
common/: CMakeLists.txt
common/include/: hss_error.h  hss_error_macros.h  hss_gpio_types.h  hss_uart_types.h
common/src/: hss_error.c
drivers/: CMakeLists.txt
drivers/gpio/: CMakeLists.txt  hss_gpio.c  hss_gpio.h
drivers/gpio/include/: hss_gpio.h
drivers/gpio/src/: hss_gpio.c
drivers/uart/: CMakeLists.txt
drivers/uart/include/: hss_uart.h
drivers/uart/src/: hss_uart.c
platform/: CMakeLists.txt
platform/include/: hss_platform.h  hss_platform_gpio.h  hss_platform_uart.h
platform/windows/: hss_platform.c  hss_platform.h  hss_platform_gpio.c  hss_platform_gpio_internal.h  hss_platform_uart.c  hss_uart_platform.c  hss_uart_platform.h
